student can't edit after due date

--- a/PeerConnect/templates/base.html
+++ b/PeerConnect/templates/base.html
@@ -21,6 +21,7 @@
     <link href="{% static 'styles/view_assessment.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/peer_assessment_summary.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/submit_assessment.css' %}" rel="stylesheet" />
+    <link href="{% static 'styles/past_due_date.css' %}" rel="stylesheet" />
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
