--- a/PeerConnect/templates/PeerConnect/course_form.html
+++ b/PeerConnect/templates/PeerConnect/course_form.html
@@ -31,7 +31,7 @@
             <label for="year">Year</label>
             <input type="number" id="year" name="year" min="2000" max="2100" required>
 
-            <label for="students">Students</label>
+            <!-- <label for="students">Students</label> -->
             <!--<input type="text" id="students" name="students" list="students-list" placeholder="Start typing to search..." required multiple>
 
             <datalist id="students-list">
@@ -50,11 +50,11 @@
                 {% endif %}
             </div>-->
             
-            <select id="students" name="students" multiple required>
+            <!-- <select id="students" name="students" multiple required>
                 {% for student in students %}
                     <option value="{{ student.id }}">{{ student.user.first_name }} {{ student.user.last_name }}</option>
                 {% endfor %}
-            </select>
+            </select> -->
 
             <button type="submit">Create Course</button>
         </form>
