--- a/PeerConnect/templates/PeerConnect/course_roster.html
+++ b/PeerConnect/templates/PeerConnect/course_roster.html
@@ -18,7 +18,7 @@
     {% csrf_token %}
     <div>
         <label for="invitations">Student Names and Emails:</label>
-        <textarea name="invitations" id="invitations" rows="10" required placeholder="Equeen nter names and emails, one per line (e.g., 'John Doe, john@example.com')"></textarea>
+        <textarea name="invitations" id="invitations" rows="10" required placeholder="Enter names and emails, one per line (e.g., 'John Doe, john@example.com')"></textarea>
     
     </div>
     <button type="submit">Send Invitations</button>
