--- a/PeerConnect/templates/base.html
+++ b/PeerConnect/templates/base.html
@@ -18,9 +18,11 @@
     <link href="{% static 'styles/create_assessment.css' %}" rel="stylesheet" />  
     <link href="{% static 'styles/navbar.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/create.css' %}" rel="stylesheet" />
+    <link href="{% static 'styles/create_team.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/view_assessment.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/peer_assessment_summary.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/submit_assessment.css' %}" rel="stylesheet" />
+    <link href="{% static 'styles/course_roster.css' %}" rel="stylesheet" />
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
