--- a/PeerConnect/templates/PeerConnect/course_roster.html
+++ b/PeerConnect/templates/PeerConnect/course_roster.html
@@ -46,7 +46,7 @@
         <h3 class="card-title">Send Invitations</h3>
     </div>
     <div class="card-content">
-        <form method="post">
+        <form method="post" action="{% url 'course_roster' selected_course.id %}">
             {% csrf_token %}
             <div class="form-group">
                 <label for="invitations">Enter names and emails, one per line:</label>
