--- a/PeerConnect/templates/PeerConnect/course_assessments.html
+++ b/PeerConnect/templates/PeerConnect/course_assessments.html
@@ -13,6 +13,7 @@
                     <th>Due</th>
                     <th>View</th>
                     <th>Responses</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
             <tbody>
@@ -34,6 +35,11 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
                                 </svg>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{% url 'delete_assessment' assessment.id %}" class="btn btn-light btn-icon">
+                                x
                             </a>
                         </td>
                     </tr>
