--- a/PeerConnect/templates/PeerConnect/course_assessments.html
+++ b/PeerConnect/templates/PeerConnect/course_assessments.html
@@ -18,6 +18,18 @@
             </thead>
             <tbody>
                 {% for assessment in assessments %}
+                <div id="delete-assessment-popup-{{ assessment.id }}" class="modal">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1>Are you sure you want to delete '{{ assessment.name }}'?</h1>
+                      <a href="#" class="close">&times;</a>
+                    </div>
+                    <a href="{% url 'delete_assessment' selected_course.id assessment.id %}">
+                      <div class="delete-course">Yes</div>
+                    </a>
+                  </div>
+                </div>
+                
                     <tr>
                         <td>{{ assessment.name }}</td>
                         <td>{{ assessment.available_date }}</td>
@@ -38,9 +50,9 @@
                             </a>
                         </td>
                         <td>
-                            <a href="{% url 'delete_assessment' assessment.id %}" class="btn btn-light btn-icon">
-                                x
-                            </a>
+                            <a href="#delete-assessment-popup-{{ assessment.id }}" class="btn btn-light btn-icon">x</a>
+                            <!-- <a href="{% url 'delete_assessment' assessment.id selected_course.id %}" class="btn btn-light btn-icon">x</a> -->
+
                         </td>
                     </tr>
                 {% endfor %}
