--- a/PeerConnect/templates/PeerConnect/student_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/student_dashboard.html
@@ -38,17 +38,17 @@
                  </button>
                </a>-->
                
-              <div class="to-do-progress">
+              <!--<div class="to-do-progress">
                 <div class="progress-bar"></div>
-              </div>
+              </div>-->
               {% if assessments %}
                 {% if assessments|length == 1 %}
                 <p class="progress-text">You have 1 assessment due</p>
                 {% elif assessments|length > 1 %}
                   <p class="progress-text">You have {{assessments|length}} assessments due</p>
-                {% else %}
-                <p class="progress-text">You have 0 tasks due</p>
                 {% endif %}
+              {% else %}
+                <p class="progress-text">You have 0 tasks due</p>
               {% endif %}
              </div>
            </div>
