--- a/PeerConnect/templates/base.html
+++ b/PeerConnect/templates/base.html
@@ -24,6 +24,7 @@
     <link href="{% static 'styles/submit_assessment.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/past_due_date.css' %}" rel="stylesheet" />
     <link href="{% static 'styles/course_roster.css' %}" rel="stylesheet" />
+    <link href="{% static 'styles/results_page.css' %}" rel="stylesheet" />
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
