--- a/PeerConnect/templates/navbar.html
+++ b/PeerConnect/templates/navbar.html
@@ -19,10 +19,10 @@
         
         <nav class="main-nav">
             <ul class="nav-list">
-                <li class="nav-item nav-item-active">Forms</li>
-                <li class="nav-item">Results</li>
+                <li class="nav-item nav-item-active"><a href="{% url 'student_dashboard' %}">Dashboard</a></li>
+                <li class="nav-item"><a href="{% url 'results_page' %}">Results</a></li>
                 <li class="nav-item">Teams</li>
-                <li class="nav-item">Help</li>
+                <!--<li class="nav-item">Help</li>-->
                 <li class="nav-item">Archive</li>
             </ul>
         </nav>
