--- a/PeerConnect/static/styles/landingpage.css
+++ b/PeerConnect/static/styles/landingpage.css
@@ -5,11 +5,39 @@
   font-family: 'Inder', sans-serif;
 }
 
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-image: url('assets/peers2.webp');
+  background-size: cover; 
+  opacity: 0.4;
+  z-index: -1; /
+}
+
 body {
   font-size: 14px;
-  background: #fff;
+  /* background: #fff; */
+  /* background-image: url('assets/peers.avif') ; */
   color: #000;
 }
+
+
+/* body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: url('../assets/delete.png') no-repeat center center;
+  background-size: cover;
+  opacity: 0.4;
+  z-index: -1;
+} */ 
 
 .landing-container {
   width: 80%;
