--- a/PeerConnect/templates/PeerConnect/professor_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/professor_dashboard.html
@@ -25,7 +25,7 @@
             </div>
             
             <div class="assessment-container">
-                <h4>Assessments</h4>
+                <h4>Upcoming Assessments</h4>
                 {% if assessments %}
                     <ul>
                         {% for assessment in assessments %}
