--- a/PeerConnect/templates/navbar.html
+++ b/PeerConnect/templates/navbar.html
@@ -21,9 +21,9 @@
             <ul class="nav-list">
                 <li class="nav-item nav-item-active"><a href="{% url 'student_dashboard' %}">Dashboard</a></li>
                 <li class="nav-item"><a href="{% url 'results_page' %}">Results</a></li>
-                <li class="nav-item">Teams</li>
+                <li class="nav-item"><a href="{% url 'teams_page' %}">Teams</a></li>
                 <!--<li class="nav-item">Help</li>-->
-                <li class="nav-item">Archive</li>
+                <li class="nav-item"><a href="{% url 'archive_page' %}">Archive</a></li>
             </ul>
         </nav>
         
