--- a/PeerConnect/static/styles/create.css
+++ b/PeerConnect/static/styles/create.css
@@ -377,7 +377,7 @@ body {
 
 .btn-primary {
   background-color: var(--primary-color);
-  color: white;
+  color: white; 
 }
 
 .btn-primary:hover {
@@ -399,7 +399,7 @@ a {
 
 .btn-light {
   background-color: #f0f0f0;
-  color: #333;
+  color: #333 !important; 
 }
 
 .btn-light:hover {
