--- a/PeerConnect/static/styles/professor_dashboard.css
+++ b/PeerConnect/static/styles/professor_dashboard.css
@@ -34,6 +34,18 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
   
+  .welcome-header {
+    text-align: center;
+    margin-bottom: 30px;
+    padding: 20px;
+    animation: fadeIn 0.6s ease-out;
+}
+
+.welcome-header .greeting {
+    font-size: 28px;
+    font-weight: bold;
+    color: #1e3a5f;
+}
   .sidebar {
     display: flex;
     flex-direction: column;
@@ -45,22 +57,18 @@
     background-color: #f5e6da;
     border-radius: 25px;
     box-shadow: 0 4px 20px #a2adb9;
+    overflow-y: scroll;
     animation: slideInFromLeft 0.6s ease-out;
   }
   
-  .sidebar .greeting {
+  .sidebar .title {
     font-size: 24px;
     font-weight: bold;
-    color: #1e3a5f;
-    text-align: center;
+    color: var(--primary-color); /* Blue color for the title */
     margin-bottom: 20px;
-  }
-  
-  .sidebar h4 {
     text-align: center;
-    font-size: 18px;
-    color: rgb(61, 109, 138);
-    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid var(--primary-color);
   }
   
   .sidebar ul {
@@ -68,22 +76,21 @@
     padding: 0;
   }
   
+  .sidebar .card-actions {
+    display: flex;
+    flex-direction: row;
+  }
+
   .sidebar ul li {
-    padding: 15px;
-    background-color: #fff;
-    color: #333;
-    border-radius: 8px;
-    margin-bottom: 10px;
-    text-align: left;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+    background: white;
+    border-radius: var(--border-radius);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+    padding: 10px;
+    transition: transform 0.2s, box-shadow 0.2s;
+    border-left: 4px solid var(--secondary-color);
+    margin-bottom: 20px;
   }
   
-  .sidebar ul li:hover {
-    background-color: #007bff;
-    color: white;
-    transform: scale(1.05);
-  }
   
   .course-container {
     display: flex;
@@ -96,29 +103,6 @@
     text-decoration: none; /* Removes underline */
   }
   
-  .course-card {
-    background-color: #f5e6da;
-    box-shadow: 0 4px 20px #a2adb9;
-    height: 200px;
-    width: 200px;
-    margin: 10px;
-    color: #1e3a5f;
-    font-size: 16px;
-    padding: 12px 24px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    animation: fadeIn 0.6;
-  }
-  
-  .course-card:hover {
-    background-color: #e07a5f;
-  }
   
   .new-course {
     background-color: white;
