--- a/PeerConnect/templates/PeerConnect/course_form.html
+++ b/PeerConnect/templates/PeerConnect/course_form.html
@@ -56,7 +56,7 @@
                 {% endfor %}
             </select> -->
 
-            <button type="submit">Create Course</button>
+            <button type="submit" class="btn btn-primary">Create Course</button>
         </form>
     </div>
 </body>
