--- a/PeerConnect/templates/PeerConnect/professor_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/professor_dashboard.html
@@ -13,7 +13,7 @@
                                 <h3 class="card-title team-members">{{ assessment.name }}</h3>
                                 <p id="due-date"><span class="badge">{{ assessment.due_date }}</span></p>
                                 <div class="card-actions">
-                                    <a href="{% url 'view_assessment' assessment.id %}" class="btn btn-light btn-icon" title="Edit Assessment" >
+                                    <a href="{% url 'edit_assessment' assessment.id %}" class="btn btn-light btn-icon" title="Edit Assessment" >
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                 <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
                                                 <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
