--- a/PeerConnect/templates/PeerConnect/archive_page.html
+++ b/PeerConnect/templates/PeerConnect/archive_page.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="archive-container">
+    <div class="results-container">
         <h3 class="section-title">Archive</h3>
         <div class="results">
         {% for assessment in assessments %}
