--- a/PeerConnect/static/styles/teams_page.css
+++ b/PeerConnect/static/styles/teams_page.css
@@ -22,6 +22,7 @@
   body {
     font-size: 16px;
     background: #f5f7fa;
+    margin-top: 60px;
     color: var(--dark-text);
     line-height: 1.6;
   }
